# System-Software

./: .gitignore  Makefile  Sensor.db  code_review_checklist.ods  config.h  connmgr.c  connmgr.h  datamgr.c  datamgr.h  ma_malloc.c  ma_malloc.h  main.c  readme.md  sbuffer.c  sbuffer.h  sensor_db.c  sensor_db.h  sensor_node.c
ex1/: Makefile  config.h  connmgr.c  connmgr.h  dplist.c  dplist.h  dplist_test.c  list_test_matrix_ex1.ods  main.c  sensor  test_server.c
ex1/lib/: dplist.c  dplist.h
ex2/: Makefile  config.h  connmgr.c  connmgr.h  dplist.c  dplist.h  main.c  sensor_node.c
ex2/lib/: tcpsock.h
ex3/: CMakeLists.txt  Makefile  config.h  datamgr.c  datamgr.h  dplist.c  dplist.h  dplist_test.c  file_creator.c  list_test_matrix_ex3.ods  main.c  sensor_data  sensor_data_text  valgrind-out.txt
ex4/: Makefile  list_test_matrix_ex4.ods  main.c
lab1/: Makefile
lab1/ex2/: main.c
lib/: dplist.c  dplist.h  tcpsock.h
